[gd_scene load_steps=2 format=3 uid="uid://b37inyekxi2ps"]

[ext_resource type="Script" uid="uid://b8ideun7jkowb" path="res://properties_panel.gd" id="1_tx58b"]

[node name="PropertiesPanel" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 148.0
grow_vertical = 2
script = ExtResource("1_tx58b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="IndexLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Point 0"

[node name="HSeparator1" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="PositionContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PositionLabel" type="Label" parent="VBoxContainer/PositionContainer"]
layout_mode = 2
text = "Position"

[node name="XContainer" type="HBoxContainer" parent="VBoxContainer/PositionContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PositionContainer/XContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "X: "

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PositionContainer/XContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -6.0
max_value = 6.0
step = 0.01
alignment = 2

[node name="YContainer" type="HBoxContainer" parent="VBoxContainer/PositionContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/PositionContainer/YContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Y: "

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PositionContainer/YContainer"]
layout_mode = 2
size_flags_horizontal = 3
min_value = -6.0
max_value = 6.0
step = 0.01
alignment = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HeadingContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeadingContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Heading"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HeadingContainer"]
layout_mode = 2
min_value = -360.0
max_value = 360.0
step = 0.01
allow_greater = true
allow_lesser = true
alignment = 2

[node name="HeadingVisibilityContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HeadingVisibilityContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Heading Visible"

[node name="CheckBox" type="CheckBox" parent="VBoxContainer/HeadingVisibilityContainer"]
layout_mode = 2

[node name="ReversedContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer/ReversedContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Reverse Heading"
